# detailz

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: dates.rs  exif.rs  format.rs  hash.rs  macos.rs  main.rs  terminal.rs  text.rs  xattrs.rs
tests/: integration.rs
tests/fixtures/: broken-link.txt  latin1.txt  link-target.txt  utf16.txt  utf32be-bom.txt  utf8.txt  working-link.txt
